--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
+    "favicons-webpack-plugin": "0.0.9",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
